// Copyright Copyright 2019-2020 Materialize, Inc. All rights reserved.
//
// This file is part of Materialize. Materialize may not be used or
// distributed without the express permission of Materialize, Inc.

syntax = "proto3";

enum Binary {
  ZERO = 0;
  ONE = 1;
}

message Struct {
  sint32 int = 1;
  int32 bad_int = 2;
  Binary bin = 3;
  string st = 4;
}

message RepeatedSimple {
  repeated sint64 ints = 1;
  repeated string strings = 2;
}

message RepeatedStruct {
  repeated Struct struct_field = 1;
  repeated string st_repeated = 2;
}
